--- a/_config.yml
+++ b/_config.yml
@@ -2,11 +2,12 @@ title: Suppose to be the title
 author: Y. Jia
 email: ytjia.zju@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-# twitter_username: jekyllrb
-github_username:  ytjia
+  Memo interesting things in life, work and so on :)
+
+twitter_username: jekyllrb
+github_username: ytjia
+linkedin_username: yitian-jia-85337274
+instagram_username: ytjia
 
 # Minima date format
 # refer to http://shopify.github.io/liquid/filters/date/ if you want to customize this
