update: add linkenin and instagram account

--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 title: Suppose to be the title
 author: Y. Jia
-email: ytjia.zju@gmail.com
+email: ytjia.zju#gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Memo interesting things in life, work and so on :)
 
-twitter_username: jekyllrb
+twitter_username: TLinger_ZJU
 github_username: ytjia
-linkedin_username: yitian-jia-85337274
+linkedin_username: ytjia
 instagram_username: ytjia
 
 # Minima date format
