--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Suppose to be the title
 author: Y. Jia
 email: ytjia.zju#gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Memo interesting things in life, work and so on :)
+  A place to memo interesting things in life, work and so on : )
 
 twitter_username: TLinger_ZJU
 github_username: ytjia
@@ -17,7 +17,8 @@ minima:
 # If you want to link only specific pages in your header, uncomment
 # this and add the path to the pages in order as they should show up
 #header_pages:
-# - about.html
+#- about.html
+#- resume.html
 
 # Build settings
 markdown: kramdown
