--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,9 @@ minima:
 
 # If you want to link only specific pages in your header, uncomment
 # this and add the path to the pages in order as they should show up
-#header_pages:
-#- about.html
-#- resume.html
+# header_pages:
+#   - resume_eng.html
+#   - about.html
 
 # Build settings
 markdown: kramdown
