update disqus shortname

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ linkedin_username: ytjia
 instagram_username: ytjia
 
 disqus:
-  shortname: TLinger
+  shortname: ytjia-net
 
 google_analytics: UA-107135799-1
 
